--- a/src/toda-api/toda-api.csproj
+++ b/src/toda-api/toda-api.csproj
@@ -128,10 +128,14 @@
   <ItemGroup>
     <Compile Include="App_Start\IoC.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\GeoLocationController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\City.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\GeoLocation\GeoLocationService.cs" />
+    <Compile Include="Services\GeoLocation\IGeoLocationService.cs" />
     <Compile Include="UnhandledExceptionFilter.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -145,8 +149,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
