read city from json file

--- a/src/toda-api/toda-api.csproj
+++ b/src/toda-api/toda-api.csproj
@@ -140,6 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <EmbeddedResource Include="Data\city.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
