--- a/src/toda-api/Web.config
+++ b/src/toda-api/Web.config
@@ -4,9 +4,7 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings>
-    <add key="api.version" value="v1" />
-  </appSettings>
+  <appSettings/>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
