--- a/src/toda-api/toda-api.csproj
+++ b/src/toda-api/toda-api.csproj
@@ -133,6 +133,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\City.cs" />
+    <Compile Include="Models\District.cs" />
+    <Compile Include="Models\SubDistrict.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\GeoLocation\GeoLocationService.cs" />
     <Compile Include="Services\GeoLocation\IGeoLocationService.cs" />
